# podomoro-ascii-cli

./: .gitignore  .pyre_configuration  README.md  pyproject.toml
src/podomoro_ascii_cli/: __main__.py  main.py
src/podomoro_ascii_cli/core/: __init__.py  config.py  notifier.py  session.py  timer.py
src/podomoro_ascii_cli/widgets/: __init__.py  ascii_timer.py  controls.py  progress_bar.py  session_label.py  settings_panel.py  total_work_counter.py
tests/: test_config.py  test_notifier.py  test_session.py  test_timer.py
