[project]
name = "podomoro-ascii-cli"
version = "0.1.0"
description = "Full-screen terminal-based Pomodoro timer with ASCII art display"
keywords = ["pomodoro", "timer", "tui", "cli", "ascii", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]
authors = [
    {name = "akhmadrma",email = "akhmadramadhan003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "textual (>=8.1.0,<9.0.0)",
    "textual-dev (>=1.8.0,<2.0.0)",
    "pyfiglet (>=1.0.4,<2.0.0)",
    "notify-py (>=0.3.43,<0.4.0)"
]

[project.scripts]
podomoro = "podomoro_ascii_cli.main:run"

[tool.poetry]
packages = [{include = "podomoro_ascii_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
